# hyperion-tools

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
bench/: .env.example  .gitignore  README.md  docker-compose.yml
bench/scripts/: apply-templates.sh  bulk-load.py
bench/templates/: abi.json  action.json  delta.json
benchmark/: .gitignore  ANNOUNCEMENT.md  COMPARISON.md  README.md  WORMDB_WAX_MATRIX.md  battery.sh  bench.mjs  docker-compose.yml  wax-bin.json  ws-scale-test.mjs
benchmark/atomicassets/: FRESHNESS_OVERLAY_DESIGN.md  REQUIREMENTS.md  WORMDB_STORE_DESIGN.md  WSEG_RESULTS.md  hyperion-45-vision.html
benchmark/atomicassets/validate/: README.md  crosscheck.js  http-bench.mjs  inspect.js  mongo-bench.js  package.json
benchmark/cc32d9/lightapi/: Dockerfile
benchmark/cc32d9/nodeos/: config.ini  entrypoint.sh
benchmark/lightapi/: .env.example  ANNOUNCEMENT.md  COMPARISON.md  README.md  WORMDB_MATRIX.md  bench-broad.mjs  docker-compose.yml  rebase.sh
benchmark/lightapi/cc32d9/lightapi/: chronicle-config.ini.template  entrypoint.sh
benchmark/lightapi/cc32d9/nodeos/: Dockerfile
benchmark/lightapi/ours/: Dockerfile  entrypoint-loader.sh  entrypoint-server.sh  light-api.toml
benchmark/lightapi/release/: .gitignore  QUICKSTART.md  wormdb.json
benchmark/lightapi/release/systemd/: lightapi-feed.service
benchmark/lightapi/scripts/: benchmark.sh
benchmark/lightapi/snapshot/: Dockerfile  fetch.sh
benchmark/ours/: Dockerfile
benchmark/release/: .gitignore  QUICKSTART.md  install-systemd.sh
benchmark/release/feed/: README.md  lightapi.env
benchmark/release/systemd/: wormdb-lightapi.service
benchmark/scripts/: accounts.txt  parity-check.sh
crates/abi-scanner/: Cargo.toml  README.md
crates/abi-scanner/src/: main.rs
crates/action-proto/: Cargo.toml  README.md
crates/action-proto/src/: main.rs
crates/archive-server/: Cargo.toml  README.md
crates/archive-server/src/: main.rs
crates/atomicdata/: Cargo.toml
crates/atomicdata/examples/: validate.rs
crates/atomicdata/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: abi.rs  blocks.rs  delta.rs  disk.rs  lib.rs  ship.rs  trace.rs
crates/delta-proto/: Cargo.toml  README.md
crates/delta-proto/src/: main.rs
crates/es-load/: Cargo.toml  README.md
crates/es-load/src/: main.rs
crates/light-api/: Cargo.toml  README.md  light-api-wax.toml  light-api.toml
crates/light-api/src/: asset.rs  config.rs  db.rs  error.rs  handlers.rs  keyfmt.rs  main.rs  meta.rs  respond.rs  rex.rs  routes.rs  state.rs  timeutil.rs
crates/slice-log/: Cargo.toml  README.md
crates/slice-log/src/: main.rs
crates/snapshot-load/: Cargo.toml  FORMAT.md  README.md
crates/snapshot-load/src/: atomicassets.rs  atomicmarket.rs  keyfmt.rs  main.rs  map.rs  model.rs  mongo.rs  perms.rs  reader.rs  tables.rs
crates/wseg-build/: Cargo.toml  README.md
crates/wseg-build/src/: aa_binfmt.rs  aa_builder.rs  aa_live.rs  aa_tables.rs  accinfo.rs  binfmt.rs  builder.rs  lib.rs  main.rs  name.rs  wseg.rs
datasets/: README.md
deploy/atomicassets/: .env.example  .gitignore  Dockerfile.tools  Dockerfile.wormdb  README.md  build-wormdb.sh  docker-compose.yml  entrypoint-loader.sh  entrypoint-server.sh  wormdb.json
scripts/: publish-wax-abi.sh
src/: disk.rs  lib.rs  main.rs  ship.rs  trace.rs
