[package]
name = "abi-scanner"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "High-performance Antelope ABI scanner — extracts every contract ABI version (setabi) across a chain, via SHiP or directly from the append-only state-history log. Builds a portable, ES-ingestible ABI snapshot."
license = "MIT"
repository = "https://github.com/eosrio/abi-scanner"
authors = ["EOS Rio"]
keywords = ["antelope", "eosio", "ship", "abi", "state-history"]
categories = ["command-line-utilities", "parsing"]
readme = "README.md"

[[bin]]
name = "abi-scanner"
path = "src/main.rs"

[dependencies]
# Pure-Rust abieos backend (no C++/bindgen toolchain) — builds anywhere.
rs_abieos = { version = "0.6", default-features = false, features = ["rust-backend"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
futures = "0.3"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
hex = "0.4"
flate2 = "1"

[profile.release]
lto = true
codegen-units = 1
