[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"  # mongodb 3.7 MSRV (snapshot-load Mongo sink); local toolchain is newer
license = "MIT"
repository = "https://github.com/eosrio/hyperion-tools"
authors = ["EOS Rio"]

[workspace.dependencies]
# Shared external deps — versions declared once here, referenced as `dep = { workspace = true }`.
rs_abieos = { version = "0.6", default-features = false, features = ["rust-backend"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
futures = "0.3"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
hex = "0.4"
flate2 = "1"
minreq = { version = "2", default-features = false }
tiny_http = "0.12"
# Internal shared library.
hyperion-ship = { path = "crates/core" }

[profile.release]
lto = true
codegen-units = 1
