[package]
name = "es-load"
description = "Fast parallel, GIL-free NDJSON -> Elasticsearch _bulk loader (local write-ceiling benchmarking), applying the Hyperion _id/_index rules. Loopback-only by default."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde_json = { workspace = true }
minreq = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
