[package]
name = "snapshot-load"
description = "Decode active Antelope portable snapshot state into Hyperion-shaped NDJSON or MongoDB collections without nodeos or SHiP replay."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rs_abieos = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }  # decoded-row JSON -> reshape into exact Hyperion doc shapes
ruzstd = "0.7"  # pure-Rust zstd decoder (no C toolchain) for .bin.zst inputs
crossbeam-channel = "0.5"  # MPMC channels for the scan -> decode-workers -> writer pipeline
# Streaming HTTP-direct input: GET + on-the-fly decompress + decode (live-Hyperion spin-up overlap).
ureq = { workspace = true }       # blocking streaming HTTP(S) body reader
tar = { workspace = true }        # untar the single snapshot-*.bin from a .tar.gz stream
flate2 = { workspace = true }     # GzDecoder for the .tar.gz leg
# MongoDB sink (high-throughput parallel insert_many). Async tokio API, default features
# (rustls-tls + bson-2); `mongodb::bson` provides Document/to_document. Needs Rust >= 1.88 (MSRV).
mongodb = { workspace = true }
tokio = { workspace = true }   # current-thread/multi-thread runtime for the async writer bridge
futures = { workspace = true } # buffer_unordered over concurrent insert_many futures
# Light-API pub_keys reverse index: convert abieos' PUB_K1_ keys to the legacy EOS… form so /key
# queries match either encoding. base58 + ripemd160 checksum, pure-Rust (no C toolchain).
bs58 = "0.5"
ripemd = "0.1"
# Build a WormDB Light-API segment (.wseg) directly from the snapshot (no Mongo) via the shared
# push-based Builder.
wseg-build = { path = "../wseg-build" }
# Decode AtomicAssets `serialized_data` blobs (the `atomicassets`/`atomic` preset) — the on-chain
# eosio::atomicdata format, driven by each row's schema/collection `format`.
atomicdata = { path = "../atomicdata" }
