[package]
name = "wseg-build"
description = "Builds a frozen WormDB Light-API segment (.wseg) from the per-chain Hyperion MongoDB — a compact, memory-mappable columnar file (Antelope-name u64 index + blob arenas) that WormDB serves the Light-API tables from without per-key heap overhead."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "wseg_build"
path = "src/lib.rs"

[[bin]]
name = "wseg-build"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }            # async runtime for the Mongo stream
mongodb = { workspace = true }          # async driver — same version as light-api / snapshot-load
clap = { workspace = true }             # CLI args
anyhow = { workspace = true }           # error plumbing
futures = { workspace = true }          # TryStreamExt cursor streaming
