[package]
name = "wseg-build"
description = "Builds a frozen WormDB Light-API segment (.wseg) from the per-chain Hyperion MongoDB — a compact, memory-mappable columnar file (Antelope-name u64 index + blob arenas) that WormDB serves the Light-API tables from without per-key heap overhead."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "wseg_build"
path = "src/lib.rs"

[[bin]]
name = "wseg-build"
path = "src/main.rs"

# AtomicAssets faceted-store POC: build the segment from Mongo, and probe it (mmap + query bench).
[[bin]]
name = "aa-build"
path = "src/bin/aa_build.rs"

[[bin]]
name = "aa-probe"
path = "src/bin/aa_probe.rs"

# Live freshness overlay: drive a SHiP-shaped mutation stream through the overlay + benchmark it.
[[bin]]
name = "aa-live"
path = "src/bin/aa_live.rs"

[dependencies]
tokio = { workspace = true }            # async runtime for the Mongo stream
mongodb = { workspace = true }          # async driver — same version as light-api / snapshot-load
clap = { workspace = true }             # CLI args
anyhow = { workspace = true }           # error plumbing
futures = { workspace = true }          # TryStreamExt cursor streaming
# Binary accinfo compaction: bs58-decode the stored EOS/PUB_K1 key strings to extract the 33-byte
# point + the two 4-byte checksums, so the segment stores 41 bytes/key instead of ~110 bytes of
# strings (the procedure base58-re-encodes both forms at request time).
bs58 = "0.5"
# AA POC probe: mmap the segment (so only touched blobs fault in) + read process RSS to prove the
# tens-of-MiB-resident working-set claim.
memmap2 = "0.9"
memory-stats = "1"
# Phase 2 experiment: roaring bitmaps for the inverted posting lists (compress + fast bitmap-AND).
roaring = "0.10"
